# elspero-core

./: CONTRIBUTING.md  Makefile.am  README.md  configure.ac  libnavcoinconsensus.pc.in
build-aux/m4/: navcoin_find_bdb48.m4  navcoin_qt.m4  navcoin_subdir_to_include.m4
contrib/: gitian-build.sh  navcoin-cli.bash-completion  navcoin-tx.bash-completion  navcoind.bash-completion  qt_translations.py
contrib/debian/: copyright  navcoin-tx.bash-completion  navcoind.bash-completion
contrib/devtools/: README.md  fix-copyright-headers.py  symbol-check.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: navcoind.conf  navcoind.init  navcoind.openrc  navcoind.openrcconf
contrib/linearize/: example-linearize.cfg  linearize-hashes.py
contrib/macdeploy/: custom_dsstore.py  fancy.plist  (+1 more)
doc/: Creating_an_OSX_DMG.md  Doxyfile  README.md  README_osx.md  README_windows.txt  REST-interface.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  developer-notes.md  gitian-building.md  init.md  npips.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  zmq.md
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  NavCoin4-Qt.files  addressindex.h  addrman.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  indirectmap.h  init.cpp  init.h  kernel.cpp  (+50 more)
src/bench/: bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: cfund.cpp  cfund.h  consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/mnemonic/: dictionary.h
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: NavCoin4.files  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  coldstakingwizard.cpp  communityfundcreatepaymentrequestdialog.cpp  communityfundcreateproposaldialog.cpp  csvmodelwriter.h  editaddressdialog.h  getaddresstoreceive.cpp  getaddresstoreceive.ui  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.h  navcoin.cpp  navcoin.qrc  navcoin_locale.qrc  navcoinaddressvalidator.cpp  navcoinaddressvalidator.h  navcoinamountfield.cpp  navcoinamountfield.h  navcoingui.cpp  navcoingui.h  navcoinstrings.cpp  navcoinunits.cpp  navcoinunits.h  (+62 more)
src/qt/forms/: coincontroldialog.ui  communityfundcreatepaymentrequestdialog.ui  communityfundcreateproposaldialog.ui  communityfunddisplay.ui  communityfunddisplaydetailed.ui  communityfunddisplaypaymentrequest.ui  communityfunddisplaypaymentrequestdetailed.ui  communityfundpage.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  sendcommunityfunddialog.ui  signverifymessagedialog.ui
src/qt/locale/: navcoin_af.ts  navcoin_af_ZA.ts  navcoin_ar.ts  navcoin_be_BY.ts  navcoin_bg.ts  navcoin_bg_BG.ts  navcoin_ca.ts  navcoin_ca@valencia.ts  navcoin_ca_ES.ts  navcoin_cs.ts  navcoin_cs_CZ.ts  navcoin_cy.ts  navcoin_da.ts  navcoin_de.ts  navcoin_el.ts  navcoin_el_GR.ts  navcoin_en.ts  navcoin_en_GB.ts  navcoin_eo.ts  navcoin_es.ts  navcoin_es_AR.ts  navcoin_es_CL.ts  navcoin_es_CO.ts  navcoin_es_DO.ts  navcoin_es_ES.ts  navcoin_es_MX.ts  navcoin_es_UY.ts  navcoin_es_VE.ts  navcoin_et.ts  navcoin_eu_ES.ts  navcoin_fa.ts  navcoin_fa_IR.ts  navcoin_fi.ts  navcoin_fr.ts  navcoin_fr_CA.ts  navcoin_fr_FR.ts  navcoin_gl.ts  navcoin_he.ts  navcoin_hi_IN.ts  navcoin_hr.ts  (+45 more)
src/qt/res/: navcoin-qt-res.rc
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: interpreter.h  ismine.cpp  ismine.h  navcoinconsensus.cpp  navcoinconsensus.h  script.h  script_error.h  sigcache.h  standard.cpp  standard.h
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  navcoin-util-test.py  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2PKH_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum10.h  (+16 more)
src/test/data/: navcoin-util-test.json  sighash.json
src/utils/: dns_utils.cpp
src/wallet/: crypter.h  db.h  navtech.cpp  navtech.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+143 files in other folders)
